# blog-api

./: .env  Cargo.toml  blog.code-workspace  docker-compose.yml
migrations/2023-07-14-121533_create_user/: up.sql
migrations/2023-07-19-123730_create_post/: up.sql
migrations/2023-07-19-140629_create_foreign_key_post/: down.sql  up.sql
migrations/2023-07-20-150122_create_like_table/: up.sql
migrations/2023-07-21-063403_change_post_columns_not_null/: down.sql  up.sql
migrations/2023-07-25-143803_create_comment_table/: up.sql
src/: database.rs  jwt.rs  main.rs  schema.rs
src/json_serialization/: comment.rs  like.rs  mod.rs  new_user.rs  post.rs  user.rs
src/models/comment/: comment.rs  mod.rs  new_comment.rs
src/models/post/: like.rs  mod.rs  new_like.rs  new_post.rs  post.rs
src/models/user/: new_user.rs  user.rs
src/views/: mod.rs
src/views/auth/: get_me.rs  login.rs  mod.rs  register.rs
src/views/post/: create_comment.rs  create_like.rs  create_post.rs  delete_comment.rs  delete_post.rs  edit_comment.rs  edit_post.rs  get_post.rs  get_posts.rs  get_posts_by_user.rs  mod.rs  remove_like.rs  update_like.rs
