[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.1"
actix-service="2.0.2"
actix-cors="0.6.1"
env_logger="0.9.0"
dotenv="0.15.0"
diesel={ version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
lazy_static="1.4.0"
futures="0.3.21"
serde={ version = "1.0.136", features = ["derive"] }
serde_json="1.0.59"
validator = { version = "0.15", features = ["derive"] }